[project]
name = "phpmyadmin-crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "Polukhin Vladislav",email = "nuklea@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
